kustomize/overlays/docker-server/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard-http
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s.artsbychip.com`)
    services:
    - kind: Service
      name: kubernetes-dashboard
      port: 443
    middlewares:
    - name: traefik-http-to-https@kubernetescrd
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard-https
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8s.artsbychip.com`)
    services:
    - kind: Service
      name: kubernetes-dashboard
      port: 443
  tls:
    secretName: k8s.artsbychip.com
